link updatedgit status

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@ color: black;
 
 <ol  type="1">
 <li> <a href="./challenge-1/Profile-Card/index.html">Profile Card</a></li>
+<li> <a href="./challenge-2/Dynamic-Shopping-Cart/index.html">Dynamic Shopping Cart</a></li>
+
 </ol>
 
 </body>
